--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
                     <th><a href="https://m.me/abania.christian.09" target="_blank"><img src="Images/messer.png"></a></th>
                     <td><b>Telegram:</b><br>
                         <a href="https://t.me/Aaaisishsh" target="_blank">https://t.me/Aaaisishsh</a></td>
-                    <th><a href="https://m.me/abania.christian.09" target="_blank"><img src="Images/teleg.png" alt=""></a></th>
+                    <th><a href="https://t.me/Aaaisishsh" target="_blank"><img src="Images/teleg.png" alt=""></a></th>
                 </tr>
             </table>
             <div class="socmed">
