--- a/about.html
+++ b/about.html
@@ -33,9 +33,9 @@
                 <p>Currently, I am taking <span>Bachelor of Science in Computer Science (BSCS)</span> at the University of Cabuyao (PNC), Laguna. I take Computer
                     Science as my program because ever since I was a kid, I always wanted to make something <span>extra-ordinary</span>, and for me, all these technologies
                     that we have today is something to be considered extra-ordinary because of the things that it can do for us, and I want to contribute building and
-                    improviing something like that.</p>
+                    improving something like that.</p>
                 <p>I'm enthusiastic and reliable person. I'm willing to be a life-long learner for continous development, not only technical but also moraly. I'm also
-                    a flexible person, willing to adjust to every changes that will lead for a better outcome. I'm willing to be trained in any way, to be able to achieve
+                    a flexible person, willing to adjust to every changes that will lead for a better outcome. I'm willing to be trained in any way, to be able to
                     fulfill the role that I have to attend. And lastly, I'm a good listener not only technically, but also in personal matters.
                 </p>
                 <br>
