--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
                 <li><a href="skills.html" title="Skill Highlights">Skills</a></li>
                 <li><a href="educ.html" title="Educational Attainment">Education</a></li>
                 <li><a href="contacts.html" title="Contact Links">Contacts</a></li>
+                <li><a href="https://benedictabania.github.io/updated/" title="PetsCorner">E-Commerce</a></li>                
             </ul>
         </nav>
     </header>
