--- a/educ.html
+++ b/educ.html
@@ -21,6 +21,7 @@
                 <li><a href="skills.html" title="Skill Highlights">Skills</a></li>
                 <li><a style="color: #63d4d5;" href="educ.html" title="Educational Attainment"><u>Education</u></a></li>
                 <li><a href="contacts.html" title="Contact Links">Contacts</a></li>
+                <li><a href="https://benedictabania.github.io/updated/" title="PetsCorner">E-Commerce</a></li>                
             </ul>
         </nav>
     </header>
