--- a/skills.html
+++ b/skills.html
@@ -21,6 +21,7 @@
                 <li><a style="color: #63d4d5;" href="skills.html" title="Skill Highlights"><u>Skills</u></a></li>
                 <li><a href="educ.html" title="Educational Attainment">Education</a></li>
                 <li><a href="contacts.html" title="Contact Links">Contacts</a></li>
+                <li><a href="https://benedictabania.github.io/updated/" title="PetsCorner">E-Commerce</a></li>               
             </ul>
         </nav>
     </header>
